test/fail/fail_8.prsl
// RUN: (prsl --codegen %s 2>&1) | filecheck %s
// RUN: (prsl %s 2>&1) | filecheck %s
// CHECK: [Line 13] Error: at '*': Expect expression, got something else

var = 1;
var++;
var--;
var < 4;
var + 4;
var * 2;
var = 5;
-var;
*var;